Adding template for new stacks and abstracting site path

--- a/Pulumi.dev.yaml
+++ b/Pulumi.dev.yaml
@@ -1,3 +1,4 @@
 config:
   aws:region: us-east-2
   pulumi-aws-s3-website-cloudfront-acm-route53:domain: derpdonkey.com
+  pulumi-aws-s3-website-cloudfront-acm-route53:pathToWebsiteContents: www
