--- a/Pulumi.yaml
+++ b/Pulumi.yaml
@@ -4,3 +4,13 @@ runtime:
   options:
     virtualenv: venv
 description: A minimal AWS Python Pulumi program
+template:
+  config:
+    aws:region:
+      description: The AWS region to deploy into
+      default: us-west-2
+    pulumi-aws-s3-website-cloudfront-acm-route53:domain:
+      description: The domain to use (e.g. example.com)
+    pulumi-aws-s3-website-cloudfront-acm-route53:pathToWebsiteContents:
+      description: |
+        Relative path to the website's contents (e.g. the `www` folder)
